libraries/ckit/regression/valid-programs/a238.c
main () {
  int x[] = {1,2,(int)&x};
}
