libraries/ckit/regression/invalid-programs/r29.c
union X {
  int y;
};


main () {
int x;
int x; 
 return(1);
}




